系统bug处理
